# GoldRogerM-A

./: .env.example  .gitignore  AGENTS.md  Assesment_Apple_output.md  Assesment_Sezanne_output.md  Context.md  HowToUse.md  NextSteps.md  README.md  RefactoringSteps.md  main.py  pyproject.toml  pyrightconfig.json
docs/: VALIDATION.md  engineering_notes.md
goldroger/: __init__.py  api.py  cli.py  config.py  orchestrator.py
goldroger/agents/: __init__.py  _backup_specialists.py  base.py  errors.py  llm_client.py  runtime.py  specialists.py
goldroger/data/: comparables.py  fetcher.py  filings.py  fx.py  market_context.py  name_resolver.py  normalization.py  private_quality.py  private_triangulation.py  (+8 more)
outputs/: Longchamp_analysis.pptx  Longchamp_analysis.xlsx  ~$Longchamp_analysis.pptx  ~$Longchamp_analysis.xlsx
scripts/: validate_private_companies.py
tests/: test_agents.py  test_api_confirmation.py  test_cli_private_suggestions.py  test_cli_rendering.py  test_cli_sources.py  test_comparables.py  test_config.py  test_dcf.py  test_exporters_currency.py  test_fetcher_resolution.py  test_filings_market_context.py  test_fx.py  test_hallucination_firewall.py  test_json_parser.py  test_lbo.py  test_market_fill_contract.py  test_normalization.py  test_pipeline_suppression.py  test_private_company_validation.py  test_private_quality.py  test_providers.py  test_quality_gate.py  test_registry.py  test_scenarios.py  test_scoring.py  test_source_selector.py  test_sourcing.py  test_thesis_guardrails.py  test_transaction_comps.py  test_valuation_comps_anchor.py  test_wacc.py
(+95 files in other folders)
