[project]
name = "goldroger"
version = "0.1.0"
description = "AI-powered financial analysis and company valuation platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mistralai>=1.0.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "yfinance>=0.2.40",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
anthropic = [
    "anthropic>=0.40.0",
]
openai = [
    "openai>=1.0.0",
]
